syntax = "proto3";

package secaisle;

message Share {
    uint32 index = 1;
    string key_share = 2;
    string ciphertext = 3;
}

message Packet {
    enum PacketType {
        IAM = 0;
        ACK = 1;
        STORE = 2;
        RECOVER = 3;
        RETURN = 4;
    }
    
    PacketType type = 1;
    string from = 2;
    bool needs_ack = 3;
    string filename = 4;
    Share share = 5;
}
